tests/miniJava/neg/005150_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] Main java ) { return 0 ; } }
